[package]
name = "nanny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive", "cargo"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_yaml = "0.9.21"
system_shutdown = "4.0.1"

[build]
target = "i686-pc-windows-gnu"
target_os = "windows"

